--- a/public/index.html
+++ b/public/index.html
@@ -15,23 +15,8 @@
 <body>
 <!-- Wrapper -->
 <div id="wrapper">
-    <!-- Header -->
-    <header id="header">
-        <div class="inner">
-            <!-- Logo -->
-            <a href="#/" class="logo">
-                <span class="symbol"><img src="images/logo.png" alt=""/></span><span class="title">Bouquet.io</span>
-            </a>
-            <!-- Nav Icon -->
-            <nav>
-                <ul>
-                    <li><a href="#menu">Menu</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
 
-    <nav-bar id="menu"></nav-bar>
+    <nav-bar></nav-bar>
 
     <ng-view id="main"></ng-view>
 
